# headlessmc

./: .gitignore  Cargo.toml  README.md
examples/: curses_ui.rs  read_write_chat.rs  status.rs
src/: connection.rs  lib.rs  lib_old.rs  main.rs
src/connection/: packets.rs
src/connection/packets/: clientbound.rs  serverbound.rs  types.rs
src/connection/packets/clientbound/: login.rs  play.rs
src/connection/packets/serverbound/: handshaking.rs  login.rs  play.rs  status.rs
