[package]
name = "headlessmc"
version = "0.1.0"
authors = ["Niels Saurer <me@nielssaurer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pancurses = "0.16"

[dependencies]
protocol = "3.1"
protocol-derive = "3.1"
flate2 = "1.0"
jsonparse = { git = "https://github.com/skius/jsonparse" }